# ESR-Anal

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
data/examples/: sample.csv
src/backend/: __init__.py
src/backend/core/: __init__.py  physics.py  processing.py  spectrum.py  units.py
src/backend/io/: __init__.py  bruker_csv.py  loader.py
src/backend/utils/: logging.py
src/esr_lab/: __init__.py  __main__.py  app.py
src/esr_lab/core/: __init__.py  spectrum.py  units.py
src/esr_lab/gui/: main_window.py  plot_view.py
src/esr_lab/gui/panels/: import_panel.py  preprocess_panel.py
src/esr_lab/io/: __init__.py  bruker_csv.py  loader.py
src/esr_lab/utils/: __init__.py  logging.py
src/frontend/: __init__.py  app.py
src/frontend/gui/: __init__.py  main_window.py  plot_view.py
src/frontend/gui/panels/: __init__.py  import_panel.py  preprocess_panel.py
tests/: test_bruker_csv_loader.py  test_logging_and_validation.py  test_logging_utils.py  test_main_window.py  test_open_and_plot.py  test_parsers.py  test_physics.py  test_processing.py
